<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMv"
            android:icon="@drawable/movie_menu_icon"
            android:title="@string/movieStr" />
        <item
            android:id="@+id/navTv"
            android:icon="@drawable/tv_menu_icon"
            android:title="@string/tvStr" />
        <item
            android:id="@+id/navFav"
            android:icon="@drawable/fav_menu_icon"
            android:title="@string/favStr" />
        <item
            android:id="@+id/navSetting"
            android:icon="@drawable/setting_menu_icon"
            android:title="@string/settingStr" />
        <item
            android:id="@+id/navExit"
            android:icon="@drawable/arrow_back"
            android:title="@string/exitStr" />
    </group>

    <item android:title="@string/communicateStr">
        <menu>
            <item
                android:id="@+id/navShare"
                android:icon="@drawable/share_menu_icon"
                android:title="@string/shareStr" />
            <item
                android:id="@+id/navRate"
                android:title="@string/rateStr"
                android:icon="@drawable/rating_menu_icon"/>
        </menu>
    </item>

</menu>
